# stack-to-chunk

./: .gitignore  .pre-commit-config.yaml  LICENCE.md  LICENSE.md  README.md  mypy.ini  pyproject.toml  ruff.toml  test.py  tox.ini
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
benchmarks/: behnchmark.py
docs/: api.rst  conf.py  guide.rst  index.rst
docs/_static/: theme.css
docs/tutorial/: tutorial.py
examples/: convert_tiffs_to_zarr.py
src/stack_to_chunk/: __init__.py  _array_helpers.py  downsample.py  io_helpers.py  main.py  ome_ngff.py  tiff_helpers.py
src/stack_to_chunk/tests/: test_downsample.py  test_main.py
