[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
name = "stack_to_chunk"
dynamic = ["version"]
description = "Convert stacks of images to OME-Zarr"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }


authors = [{ email = "d.stansby@ucl.ac.uk", name = "HiP-CT Project" }]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "dask==2025.10.0",
    "joblib==1.5.2",
    "loguru==0.7.3",
    "numpy==2.3.4",
    "ome-zarr-models==1.0.0",
    "pydantic-zarr==0.8.4",
    "scikit-image==0.25.2",
    "zarr==3.1.1",
    "numcodecs==0.15.1",
]

optional-dependencies = { dev = [
    "pre-commit",
    "tox>=4",
], docs = [
    "dask-image",
    "matplotlib",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-gallery",
    "tifffile",
] }

[project.urls]
homepage = "https://github.com/HiPCTProject/stack-to-chunk"

[tool.coverage]
run = { branch = true, parallel = true, source = ["stack_to_chunk"] }
paths.source = ["src"]

[tool.pytest.ini_options]
addopts = ["--color=yes", "--cov", "--strict-config", "--strict-markers", "-vv"]
log_cli_level = "INFO"
minversion = 6
testpaths = ["src/stack_to_chunk/tests"]
xfail_strict = true

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/stack_to_chunk/_version.py"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false

[dependency-groups]
dev = ["pre-commit>=3.8.0", "pytest-cov>=5.0.0", "pytest>=8.3.2"]
