[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80", "setuptools_scm>=8"]

[project]
name = "stack_to_chunk"
dynamic = ["version"]
description = "Convert stacks of images to OME-Zarr"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }


authors = [{ email = "d.stansby@ucl.ac.uk", name = "David Stansby" }]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "dask==2026.3.0",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "numpy==2.4.4",
    "ome-zarr-models==1.3",
    "pydantic-zarr==0.10.0",
    "scikit-image==0.26.0",
    "zarr==3.1.1",
    "numcodecs==0.16.5",
    "tensorstore==0.1.82",
    "scipy==1.17.1",
     # Not direct dependencies, but lower versions fail to build
    "slicerator>=1",
    "fsspec>=2023"
]

optional-dependencies = { docs = [
    "dask-image==2025.11.0",
    "matplotlib==3.10.9",
    "pydata-sphinx-theme==0.17.1",
    "sphinx==9.1.0",
    "sphinx-autoapi==3.8.0",
    "sphinx-gallery==0.21.0",
    "tifffile==2026.4.11",
] }

[project.urls]
homepage = "https://github.com/HiPCTProject/stack-to-chunk"

[tool.coverage]
run = { branch = true, parallel = true, source = ["stack_to_chunk"] }
paths.source = ["src"]

[tool.pytest.ini_options]
addopts = ["--color=yes", "--cov", "--cov-report=xml", "--strict-config", "--strict-markers", "-vv"]
log_cli_level = "INFO"
minversion = 6
testpaths = ["src/stack_to_chunk/tests"]
xfail_strict = true

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/stack_to_chunk/_version.py"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false

[dependency-groups]
dev = [
    "prek>=0.3.9",
    "pytest-cov==7.1.0",
    "pytest==9.0.3",
]
